JumpScript/tests/baselines/reference/typeOfThisInStatics.errors.txt
tests/cases/compiler/typeOfThisInStatics.jump(5,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/typeOfThisInStatics.jump (1 errors) ====
    class C {
        static foo() {
            var r = this;
        }
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            var r = this;
            return 1;
        }
    }
    